public/css/global.css
body {
  background-color: #fff0a1;
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-family: Arial, sans-serif;
}
colors {
  color: #fff6f6;
  color: #ffdcb5; /*nr1*/
  color: #fff0a1;
  color: #c8dba2;
  color: #c2d2c6;
  color: #000000;
}
/* navbar */
nav {
  position: sticky;
  top: 0;
  background-color: #ffdcb5;
  padding: 1em;
  text-transform: uppercase;
  color: #fff6f6;
  z-index: 100;
  border-bottom: #000000 2px solid;
}
nav ul {
  list-style: none;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
  gap: 1em;
  margin: 0;
  padding: 0;
}
nav a {
  text-decoration: none;
  font-weight: bolder;
  font-size: 20px;
  color: #000000;
}
nav a:hover {
  color:#3b3b3b;
  text-decoration: underline;
}

/* accessbility */
/* focus */
a:focus,
button:focus,
input:focus,
textarea:focus {
  outline: 2px solid #ff3b30;
  background-color: #ff3b30;
  border-color: #ff3b30;
}
/* visually hidden */
.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  clip: rect(0 0 0 0);
}

.alert-message {
  text-align: center;
}

